    * FIX: Fix output of cmk -D: datasource programs were missing
    * FIX: allow unicode encoded extra_service_conf
    * FIX: no default PING service if custom checks are defined
    * FIX: check_mk_base: fixed rounding error in get_bytes_human_readable
    * FIX: check_mk: improved support of utf-8 characters in extra_service_conf
    * New configuration variable contactgroup_members

    Checks & Agents:
    * FIX: smart - not trying to parse unhandled lines to prevent errors
    * FIX: WATO configuration of filesystem trends: it's hours, not days!
    * FIX: winperf_processor - fixed wrong calculations of usage
    * FIX: mysql: fixed crash on computing IO information
    * FIX: diskstat: fix local variable 'ios_per_sec' referenced before assignment
    * FIX: multipath: ignore warning messages in agent due to invalid multipath.conf
    * FIX: megaraid_bbu: deal with broken output ("Adpater"), found in Open-E
    * FIX: megaraid_pdisk: deal with special output of Open-E
    * FIX: jolokia_metrics.mem: renamed parameter totalheap to total
    * FIX: check_ldap: added missing host address (check didn't work at all)
    * FIX: check_ldap: added missing version option -2, -3, -3 -T (TLS)
    * Linux agent: limit netstat to 10 seconds
    * ps: Allow %1, %2, .. instead of %s in process_inventory. That allows
      reordering of matched groups

    Multisite:
    * FIX: Fixed problem with error during localization scanning
    * FIX: Fixed wrong localization right after a user changed its language
    * FIX: Improved handling of error messages in bulk inventory
    * FIX: fixed focus bug in transform valuespec class
    * FIX: sidebar snapins which refresh do not register for restart detection anymore
    * FIX: stop doing snapin refreshes after they have been removed
    * FIX: fix user database corruption in case of a race condition
    * Changed sidebar snapin reload to a global interval (option:
      sidebar_update_interval), defaults to 30 seconds